--- a/misaki-memo-2nd/package.json
+++ b/misaki-memo-2nd/package.json
@@ -7,7 +7,9 @@
     "@types/node": "12.7.8",
     "@types/react": "16.9.3",
     "@types/react-dom": "16.9.1",
+    "bootstrap": "^4.3.1",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2",
     "typescript": "3.6.3"
@@ -36,8 +38,10 @@
     ]
   },
   "devDependencies": {
+    "@types/bootstrap": "^4.3.1",
     "@types/eslint-plugin-prettier": "^2.2.0",
     "@types/prettier": "^1.18.2",
+    "@types/react-bootstrap": "^0.32.20",
     "@types/stylelint": "^9.10.1",
     "@typescript-eslint/eslint-plugin": "^2.3.1",
     "@typescript-eslint/parser": "^2.3.1",
