--- a/misaki-memo-2nd/public/manifest.json
+++ b/misaki-memo-2nd/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "美咲メモ2nd",
+  "name": "美咲メモ 2nd",
   "icons": [
     {
       "src": "favicon.ico",
